chore: specify frontend build artifacts in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,9 @@ Thumbs.db
 
 # Logs
 *.log
-frontend/
+
+# Frontend build artifacts
+frontend/.next/
+frontend/out/
+frontend/node_modules/
+frontend/.turbo/
